kube-stack/messageapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messageapi-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messageapi
  template:
    metadata:
      labels:
        app: messageapi
    spec:
      containers:
      - name: messageapi
        image: jrmngndr/message-api
        ports:
        - containerPort: 8080
