kube-stack/messageapi-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messageapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: local-aliased-domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: messageapi-service
            port:
              number: 80
